# syncrim

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  GITHUB.md  LICENSE-MIT  README.md  TODO.md  add.json  add_mux.json  add_reg.json  empty.json  mips.json  mips_single_cycle.json  model.json  mux.json  reg_file.json  regfile.json  sext.json
.github/workflows/: rust.yml  security.yml
examples/: add.rs  add_edit.rs  add_mux.rs  add_reg.rs  add_reg_compound_wire.rs  alu.rs  and.rs  clk.rs  data_mem.rs  full_adder.rs  gui.rs  gui2.rs  gui3.rs  load.rs  mips_controll_unit.rs  mips_example_1.rs  mips_im_dm_regfile.rs  mips_instruction_splitter.rs  mips_jump_merge.rs  mips_mux.rs  mips_pipe_example_1.rs  mips_reg_file.rs  mux.rs  mux2.rs  mux3.rs  mux_edit.rs  pass_trough.rs  probe_constant.rs  probe_edit.rs  probe_halt.rs  probe_stim.rs  probe_stim_assert.rs  reg.rs  reg_loop.rs  reg_loop2.rs  reg_loop3.rs  regfile.rs  sext.rs  sub.rs  typetag.rs
mips/: Cargo.toml  README.md
mips-lib/: Cargo.toml  mips_pipe.json  mips_pipe_ex.json  mips_simple.json  mips_singel_cycle.json  mips_single_cycle.json
mips-lib/examples/: full_adder.rs  mips_alu.rs  mips_controll_unit.rs  mips_extended_pipe_example.rs  mips_im_dm_regfile.rs  mips_instruction_splitter.rs  mips_io.rs  mips_jump_merge.rs  mips_pipe_example_1.rs  mips_reg_file.rs  mips_singel_sycle.rs  mips_timer.rs
mips-lib/src/: helpers.rs  lib.rs  main.rs
mips-lib/src/components/: full_adder.rs  mips_alu.rs  mips_alu_forward.rs  mips_branch_logic.rs  mips_control_unit.rs  mips_coprocessor.rs  mips_data_forward.rs  mips_dm.rs  mips_equals_forward.rs  mips_equals_load.rs  mips_im.rs  mips_instruction_splitter.rs  mips_io.rs  mips_jump_merge.rs  mips_mem_struct.rs  mips_mmu.rs  mips_reg_file.rs  mips_timer.rs  mod.rs  physical_mem.rs  sz_extend.rs
mips-lib/src/gui_egui/: mips_control_unit.rs  mips_dm.rs  mips_mem_view_window.rs  mips_reg_view_window.rs  mod.rs
mips-lib/src/gui_egui/components/: full_adder.rs  mips_alu.rs  mips_alu_forward.rs  mips_branch_logic.rs  mips_control_unit.rs  mips_coprocessor.rs  mips_data_forward.rs  mips_dm.rs  mips_equals_forward.rs  mips_equals_load.rs  mips_im.rs  mips_instruction_splitter.rs  mips_io.rs  mips_jump_merge.rs  mips_mmu.rs  mips_reg_file.rs  mips_timer.rs  mod.rs  physical_mem.rs  sz_extend.rs
mips-simple/: Cargo.toml
mips-simple/src/: main.rs
mips/examples/: ctrl.rs  ctrl_logic.rs  instr_split.rs  load.rs  mips.rs  reg_file.rs  save.rs
mips/src/: lib.rs  main.rs  signals.rs
mips/src/components/: branch_logic.rs  ctrl.rs  ctrl_logic.rs  instr_mem.rs  instr_split.rs  mod.rs  reg_file.rs
mips/src/components/instr_decode/: decode.rs  instr_decode.rs  mod.rs
mips/src/components/instr_decode_helper/: decode.rs
mips/src/gui_egui/components/: branch_logic.rs  instr_decode.rs  instr_mem.rs  mod.rs  reg_file.rs
mips/src/gui_vizia/components/: branch_logic.rs  ctrl_logic.rs  instr_decode.rs  instr_mem.rs  instr_split.rs  mod.rs  reg_file.rs
mips/tests/: component_tests.rs
riscv/: Cargo.toml  DESC.md  README.md  asm.s  asm.s.bak  asm.s.old  asm_branch.s  asm_break.s  asm_gpio.s  asm_mem.s  asm_timer.s  autosave.json  decode.s  decode_link.x  disasm.riscv  disasm.s  dwarfdump  llvm.riscv  memory.x  objdump.s  riscv.gv.old  riscv.gv.old2  riscv.json
riscv/examples/: antiq.rs  empty.rs  riscv.rs
riscv/riscv_asm/: Cargo.toml  README.md  build.rs
riscv/riscv_asm/.cargo/: config.toml
riscv/riscv_asm/src/: main.rs
riscv/riscv_basic/: Cargo.toml  asm.poke  assembly.objdump  expanded.rs  memory.x  objdump.s  rustfmt.toml
riscv/riscv_basic/.cargo/: config.toml
riscv/riscv_basic/examples/: rt.rs  rtic.rs  test.rs
riscv/riscv_basic/src/: bare.rs  main.rs  main.rs.old2  rtic.rs
riscv/src/: main.rs
riscv/src/components/: aclic.rs  alu.rs  antiq.rs  antiq_ctl.rs  branch_logic.rs  clic.rs  csr.rs  decoder.rs  gpio.rs  instr_mem.rs  led.rs  lsb_zero.rs  mem.rs  mod.rs  probe_label.rs  reg_file.rs  sign_extend.rs  sign_zero_ext.rs  sysclk.rs  wb_ctl.rs
riscv/src/gui_egui/components/: alu.rs  branch_logic.rs  clic.rs  decoder.rs  gpio.rs  instr_mem.rs  led.rs  lsb_zero.rs  mod.rs  probe_label.rs  reg_file.rs  rv_mem.rs  sign_zero_ext.rs  wb_ctl.rs
riscv/src/gui_vizia/components/: alu.rs  antiq.rs  antiq_ctl.rs  branch_logic.rs  clic.rs  decoder.rs  instr_mem.rs  lsb_zero.rs  mem.rs  mod.rs  reg_file.rs  sign_ext.rs  sign_zero_ext.rs  sysclk.rs
src/: autowire.rs  common.rs  component_store.rs  components.rs  egui.rs  fern.rs  gui.rs  lib.rs  main.rs  mips_helper_functions.rs  signal.rs  simulator.rs
src/components/: add.rs  alu.rs  and.rs  clk.rs  constant.rs  cross.rs  equals.rs  full_adder.rs  mem.rs  mips_branch_logic.rs  mips_controll_unit.rs  mips_dm.rs  mips_im.rs  mips_instruction_splitter.rs  mips_jump_merge.rs  mips_mem_struct.rs  mips_reg_file.rs  mod.rs  mux.rs  pass_through.rs  probe.rs  probe_assert.rs  probe_edit.rs  probe_halt.rs  probe_out.rs  probe_stim.rs  regfile.rs  register.rs  sext.rs  shift_left_const.rs  sub.rs  sz_extend.rs  wire.rs  zero_extend.rs
src/egui_/: egui_.rs  menu.rs  mod.rs  shortcuts.rs
src/gui/: grid.rs  gui.rs  menu.rs  mod.rs
src/gui_egui/: component_ui.rs  editor.rs  editor_wire.rs  editor_wire_mode.rs  egui.rs  gui.rs  gui_options.rs  helper.rs  keymap.rs  library.rs  menu.rs  mips_mem_view_window.rs  mod.rs  shortcuts.rs
src/gui_egui/components/: add.rs  and.rs  clk.rs  constant.rs  cross.rs  equal.rs  full_adder.rs  mem.rs  mips_branch_logic.rs  mips_controll_unit.rs  mips_dm.rs  mips_im.rs  mips_instruction_splitter.rs  mips_jump_merge.rs  mips_reg_file.rs  mod.rs  mux.rs  pass_through.rs  probe.rs  probe_assert.rs  probe_edit.rs  probe_out.rs  probe_stim.rs  register.rs  sext.rs  shift_left_const.rs  sub.rs  sz_extend.rs  wire.rs  zero_extend.rs
src/gui_vizia/: grid.rs  gui.rs  gui_components.rs  hover.rs  keymap.rs  menu.rs  mod.rs  popup.rs  style.css  tooltip.rs  transport.rs
src/gui_vizia/components/: add.rs  alu.rs  constant.rs  cross.rs  mem.rs  mod.rs  mux.rs  (+9 more)
tests/: component_tests.rs  components.rs
(+7 files in other folders)
