[package]
name = "syncrim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["mips"]

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
fern = "0.6.2"
log = "0.4.19"
num_enum = "0.6.1"
petgraph = "0.6.3"
rfd = "0.11.4"
serde = { version = "1.0.167", features = ["rc"] }
serde_derive = "1.0.166"
serde_json = "1.0.100"
typetag = "0.2.9"


[dependencies.vizia]
git = "https://github.com/vizia/vizia.git"
# path = "../vizia"
optional = true

[dependencies.egui]
optional = true
version = "0.22.0"

[dependencies.eframe]
optional = true
version = "0.22.0"

[dependencies.epaint]
optional = true
version = "0.22.0"

[features]
default = ["gui-vizia"]
components = []
gui-vizia = ["vizia", "components"]
gui-egui = ["egui", "eframe", "epaint", "components"]

[profile.dev]
debug = 1 # faster build, still allows for stack back trace

[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true
debug = 1          # faster build, still allows for stack back trace

[[test]]
name = "component_tests"
required-features = ["components"]

[[example]]
name = "add"
required-features = ["components"]

[[example]]
name = "add_mux"
required-features = ["components"]

[[example]]
name = "add_reg"
required-features = ["components"]

[[example]]
name = "mux"
required-features = ["components"]

[[example]]
name = "reg"
required-features = ["components"]

[[example]]
name = "sext"
required-features = ["components"]

[[example]]
name = "data_mem"
required-features = ["components"]
