[package]
name = "syncrim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["mips-lib", "riscv"]

[dependencies]
MIPS_disassembly = "=0.1.3"
anyhow = "1.0.72"
clap = { version = "4.3.15", features = ["derive"] }
elf = "0.7.4"
fern = "0.6.2"
log = "0.4.19"
num_enum = "0.6.1"
petgraph = "0.6.3"
rfd = "0.11.4"
serde = { version = "1.0.171", features = ["rc"] }
serde_derive = "1.0.171"
serde_json = "1.0.103"
typetag = "0.2.10"

[dependencies.vizia]
git = "https://github.com/vizia/vizia.git"
#rev = "7093bfd518c4bee5544a75c2ffc92dfe4f817bc0"
#path = "../vizia"
optional = true

[dependencies.egui]
optional = true
version = "0.28.0"

[dependencies.eframe]
optional = true
version = "0.28.0"

[dependencies.epaint]
optional = true
version = "0.28.0"

[features]
default = ["gui-egui"]
components = []
gui-vizia = ["vizia", "components"]
gui-egui = ["egui", "eframe", "epaint", "components"]

[profile.dev]
debug = 1 # faster build, still allows for stack back trace

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true         # equivalent to fat
incremental = true
debug = 1          # faster build, still allows for stack back trace

[[test]]
name = "component_tests"
required-features = ["components"]

[[example]]
name = "add_edit"
required-features = ["components"]

[[example]]
name = "add_mux"
required-features = ["components"]

[[example]]
name = "add_reg_compound_wire"
required-features = ["components"]

[[example]]
name = "add_reg"
required-features = ["components"]

[[example]]
name = "add"
required-features = ["components"]

[[example]]
name = "data_mem"
required-features = ["components"]

[[example]]
name = "mux_edit"
required-features = ["components"]

[[example]]
name = "probe_edit"
required-features = ["components"]

[[example]]
name = "probe_stim_assert"
required-features = ["components"]

[[example]]
name = "sext"
required-features = ["components"]
