[package]
name = "mips-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
MIPS_disassembly = "0.1.3"
anyhow = "1.0.72"
clap = { version = "4.3.15", features = ["derive"] }
elf = "0.8.0"
fern = "0.7.1"
log = "0.4.19"
num_enum = "0.7.4"
petgraph = "0.8.2"
rfd = "0.15.3"
serde = { version = "1.0.171", features = ["rc"] }
serde_derive = "1.0.171"
serde_json = "1.0.103"
typetag = "0.2.10"
egui = {version = "0.31.1"}
rustc-demangle = "0.1.25"
[dependencies.syncrim]
path = "../"
default-features = false

[features]
default = ["gui-egui"]

components = ["syncrim/components"]
gui-vizia = ["syncrim/gui-vizia"]
gui-egui = ["syncrim/gui-egui"]
