[package]
name = "mips-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
mips-lib = {path = "../mips-lib/"}
[dependencies.syncrim]
path = "../"
default-features = false

[features]
default = ["gui-egui"]

components = ["syncrim/components"]
gui-vizia = ["syncrim/gui-vizia", "components"]
gui-egui = ["syncrim/gui-egui", "components"]
