[package]
name = "mips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.166"
serde_derive = "1.0.166"
typetag = "0.2.8"
serde_json = "1.0.96"

[dependencies.syncrim]
path = "../"
default-features = false

[dependencies.vizia]
git = "https://github.com/vizia/vizia.git"
optional = true

[features]
default = ["gui-vizia"]
gui-vizia = ["vizia", "syncrim/gui-vizia"]
egui = []

[profile.dev]
debug = 1 # faster build, still allows for stack back trace

[profile.release]
incremental = true
debug = 1          # faster build, still allows for stack back trace
