[package]
name = "mips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.166"
serde_derive = "1.0.166"
typetag = "0.2.8"
serde_json = "1.0.96"

[dependencies.syncrim]
path = "../"
default-features = false

[features]
default = ["gui-vizia", "syncrim/components"]
gui-vizia = ["syncrim/gui-vizia"]
gui-egui = ["syncrim/gui-egui"]

[profile.dev]
debug = 1 # faster build, still allows for stack back trace

[profile.release]
incremental = true
debug = 1          # faster build, still allows for stack back trace

[profile.test]
default = ["components"]

[[test]]
name = "component_tests"
required-features = ["components"]

[[example]]
name = "mips"
required-features = ["components"]

[[example]]
name = "reg_file"
required-features = ["components"]