[package]
name = "mips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.175"
serde_derive = "1.0.175"
typetag = "0.2.12"
serde_json = "1.0.103"
fern = "0.6.2"
log = "0.4.19"
num_enum = "0.6.1"

[dependencies.syncrim]
path = "../"
default-features = false

[features]
default = ["gui-vizia"]

components = ["syncrim/components"]
gui-vizia = ["syncrim/gui-vizia", "components"]
gui-egui = ["syncrim/gui-egui", "components"]

[[test]]
name = "component_tests"
required-features = ["components"]

[[example]]
name = "mips"
required-features = ["components"]

[[example]]
name = "reg_file"
required-features = ["components"]
