[package]
name = "riscv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.167"
serde_derive = "1.0.167"
typetag = "0.2.9"
serde_json = "1.0.100"
riscv-elf-parse = { git = 'https://github.com/onsdagens/riscv-elf-parse/' }
clap = { version = "4.3.11", features = ["derive"] }
log = "0.4.19"
num_enum = "0.7.2"
fern = "0.6.2"
xmas-elf = "0.9.0"
asm_riscv = { git = 'https://github.com/onsdagens/wari' }
#gimli = "0.27.3"
#object = "0.31.1"
#memmap2 = "0.7.1"
riscv_asm_strings = { git = 'https://github.com/perlindgren/riscv_asm_strings' }
priority-queue = { version = "1.3.2", features = ["serde"] }
riscv-rt = "0.11.0"


[dependencies.egui]
optional = true
version = "0.28.0"

[dependencies.egui-extras]
optional = true
version = "0.28.0"

[dependencies.syncrim]
path = "../"
default-features = false

[features]
default = ["headless"]

components = ["syncrim/components"]
gui-vizia = ["syncrim/gui-vizia", "components"]
gui-egui = ["syncrim/gui-egui", "components", "egui", "egui-extras"]
headless = []

[[example]]
name = "riscv"
required-features = ["components"]
